# st-lang

./: .gitignore  Cargo.toml  README.md  index.st  test-all.sh
.fleet/: run.json
crates/st/: Cargo.toml
crates/st-core/: Cargo.toml
crates/st-core/src/: error.rs  lib.rs
crates/st-core/src/parser/: ast.rs  match.rs  mod.rs  optional.rs  parser_macro.rs  take.rs  tests.rs  then.rs  transform.rs
crates/st-core/src/tokenizer/: mod.rs  tests.rs
crates/st-lang/: Cargo.toml
crates/st-lang/src/: error.rs  lib.rs  parser.rs  symbols.rs  tokenizer.rs
crates/st-macros/: Cargo.toml
crates/st-macros/src/: lib.rs
crates/st-std/: Cargo.toml
crates/st-std/src/: lib.rs
crates/st/src/: lexer.rs  lib.rs  main.rs  parser.rs
crates/st/src/core/: mod.rs  string.rs
crates/st/src/rt/: context.rs  module.rs
examples/: annon_func.st  anon_func.st  errors.st  fib.st  full.st  functions.st  hello_world.st  loop.st  loops.st  person.st  simple.st  structs.st  sum.st  test.st  test_import.st  traits.st  using_module.st
examples/example_module/: index.st  other.st
examples/example_project/: project.st
examples/example_project/src/: hello_world.st  main.st
ide-support/st-lang-fleet/: package.json  st-lang-0.0.1.vsix
ide-support/st-lang-fleet/syntaxes/: st-lang.tmLanguage.json
ide-support/st-lang-vscode/: package.json  vsc-extension-quickstart.md
ide-support/st-lang-vscode/syntaxes/: st-lang.tmLanguage.json
st/: Cargo.toml
st-lang/: README.md  package.json
st-std/: Cargo.toml
st-std/src/: lib.rs
st/src/: lib.rs  main.rs  module.rs  parser.rs  runner.rs
(+2 files in other folders)
