[package]
name = "st"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.10", features = ["cargo"] }
regex = "1.6.0"
lazy_static = "1.4.0"
anyhow = "*"
st-macros = { path = "../st-macros" }
