[package]
name = "st"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
argster = { path = "../../../argster/argster", version = "0.1.1" }
st-core = { path = "../st-core" }
